nextcloud/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: nextcloud-db-pod
  template:
    metadata:
      labels:
        pod-label: nextcloud-db-pod
    spec:
      containers:
        - name: postgres
          image: postgres:alpine
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data1
              subPath: nextcloud-data
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: nextcloud-ssd-claim
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    pod-label: nextcloud-db-pod
  ports:
    - protocol: TCP
      port: 5432
